--- a/index.html
+++ b/index.html
@@ -28,4 +28,8 @@
   <a href="软件爬取.py">下载</a>
   <h1>ikan234免费影视</h1>
   <a href="ikan234视频爬取.py">下载py文件</a>
+  <h1>文件传输器</h1>
+  <a href="文件传输(1.1).py">下载py文件</a>
+  <h1>免费影视(GUI)</h1>
+  <a href="免费影视.zip">下载压缩包</a>
 </html>
